[gd_scene load_steps=18 format=2]

[ext_resource path="res://script/menu.gd" type="Script" id=1]
[ext_resource path="res://sprite/background/menu_principal.png" type="Texture" id=2]
[ext_resource path="res://style_button_menu/menu2.tres" type="StyleBox" id=3]
[ext_resource path="res://style_button_menu/menu.tres" type="StyleBox" id=4]
[ext_resource path="res://font/CutiveMono.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://scene/button.tscn" type="PackedScene" id=6]
[ext_resource path="res://sprite/demo_text.png" type="Texture" id=7]
[ext_resource path="res://script/volume_controle.gd" type="Script" id=8]
[ext_resource path="res://sprite/volume.png" type="Texture" id=9]
[ext_resource path="res://sprite/background/best score.png" type="Texture" id=10]
[ext_resource path="res://son/theme_music.ogg" type="AudioStream" id=11]
[ext_resource path="res://scene/Load_game.tscn" type="PackedScene" id=12]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0156863, 0.156863, 0.537255, 0.862745 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 0.34902 )
corner_radius_top_left = 10
corner_radius_bottom_right = 10
corner_detail = 5

[sub_resource type="DynamicFont" id=2]
size = 31
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 50
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
size = 15
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=5]
size = 40
use_filter = true
font_data = ExtResource( 5 )

[node name="menu" type="Node2D"]
script = ExtResource( 1 )

[node name="menu_deco" type="Node2D" parent="."]

[node name="TextureRect" type="TextureRect" parent="menu_deco"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.64804
margin_top = -0.735107
margin_right = 1025.65
margin_bottom = 584.265
texture = ExtResource( 2 )

[node name="new_game" type="Button" parent="menu_deco"]
margin_left = 381.0
margin_top = 363.867
margin_right = 648.0
margin_bottom = 412.867
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = ExtResource( 4 )
custom_styles/disabled = ExtResource( 4 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.215686, 0.403922, 0.741176, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
text = "New Game"

[node name="Load_game" parent="menu_deco" instance=ExtResource( 6 )]
margin_top = 416.834
margin_bottom = 465.834
disabled = true

[node name="exit" type="Button" parent="menu_deco"]
margin_left = 381.0
margin_top = 469.834
margin_right = 648.0
margin_bottom = 518.834
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = ExtResource( 4 )
custom_styles/disabled = ExtResource( 4 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.215686, 0.403922, 0.741176, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
text = "Quit Game"

[node name="demo_text" type="Sprite" parent="menu_deco"]
visible = false
position = Vector2( 660, 515 )
texture = ExtResource( 7 )

[node name="ColorRect" type="ColorRect" parent="menu_deco"]
visible = false
margin_left = 928.704
margin_top = 430.382
margin_right = 959.704
margin_bottom = 522.382
color = Color( 0.0156863, 0.156863, 0.537255, 0.862745 )

[node name="volume_controle" type="VSlider" parent="menu_deco/ColorRect"]
modulate = Color( 1, 1, 1, 0.478431 )
margin_left = 6.67542
margin_top = 1.57104
margin_right = 22.6754
margin_bottom = 88.571
min_value = -24.0
max_value = 24.0
ticks_on_borders = true
script = ExtResource( 8 )

[node name="volumeb1" type="TextureButton" parent="menu_deco"]
margin_left = 930.748
margin_top = 524.1
margin_right = 970.748
margin_bottom = 564.1
texture_normal = ExtResource( 9 )

[node name="volumeb2" type="TextureButton" parent="menu_deco"]
margin_left = 930.748
margin_top = 524.1
margin_right = 970.748
margin_bottom = 564.1
texture_normal = ExtResource( 9 )

[node name="best score" type="Sprite" parent="menu_deco"]
position = Vector2( 112.382, 457.473 )
scale = Vector2( 0.343181, 0.321539 )
texture = ExtResource( 10 )

[node name="Label" type="Label" parent="menu_deco/best score"]
margin_left = -162.137
margin_top = 67.7669
margin_right = 227.863
margin_bottom = 123.767
rect_rotation = -20.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.858824, 0.827451, 0.0392157, 1 )
text = "BEST    SCORE"
uppercase = true

[node name="player_name" type="Label" parent="menu_deco"]
margin_left = 9.20401
margin_top = 530.696
margin_right = 243.204
margin_bottom = 564.696
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Maloulou"
align = 1

[node name="copyright" type="Label" parent="menu_deco"]
margin_left = 319.0
margin_top = 539.0
margin_right = 733.0
margin_bottom = 578.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = " Copyright Â© ABCSpaceTyping 2019,Michel Pierre
version 1.0 BETA"
align = 1

[node name="label_best_score" type="Label" parent="menu_deco"]
margin_left = 6.9762
margin_top = 490.132
margin_right = 240.976
margin_bottom = 535.132
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "1000"
align = 1

[node name="son" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -10.0
autoplay = true

[node name="save_mode" parent="." instance=ExtResource( 12 )]
editor/display_folded = true
visible = false
[connection signal="focus_entered" from="menu_deco/new_game" to="." method="_on_new_game_focus_entered"]
[connection signal="focus_entered" from="menu_deco/Load_game" to="." method="_on_Load_game_focus_entered"]
[connection signal="focus_entered" from="menu_deco/exit" to="." method="_on_exit_focus_entered"]
[connection signal="value_changed" from="menu_deco/ColorRect/volume_controle" to="menu_deco/ColorRect/volume_controle" method="_on_volume_controle_value_changed"]
[connection signal="focus_entered" from="menu_deco/volumeb1" to="." method="_on_volumeb1_focus_entered"]
[connection signal="focus_entered" from="menu_deco/volumeb2" to="." method="_on_volumeb2_focus_entered"]
[connection signal="focus_entered" from="save_mode/load_theme/save/load_data" to="." method="_on_load_data_focus_entered"]
[connection signal="focus_entered" from="save_mode/load_theme/save2/load_data2" to="." method="_on_load_data2_focus_entered"]
[connection signal="focus_entered" from="save_mode/load_theme/save3/load_data3" to="." method="_on_load_data3_focus_entered"]

[editable path="save_mode"]
